Prep work for modifiers + bug fixes
Tool and bookmark item buttons are now grouped and can be paginated. The bookmarked items have also now moved to below the tools to create space for modifiers. Fixed bug with tooltips not allowing items to render below them. JEI has been added to the build.gradle to allow for easier testing.

--- a/build.gradle
+++ b/build.gradle
@@ -136,8 +136,9 @@ dependencies {
 
     // These dependencies get remapped to your current MCP mappings
     // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    implementation fg.deobf('curse.maven:mantle-74924:3389377')
-    implementation fg.deobf('curse.maven:tinkersconstruct-74072:3412365')
+    implementation fg.deobf('curse.maven:mantle-74924:3439180')
+    implementation fg.deobf('curse.maven:tinkersconstruct-74072:3439200')
+    implementation fg.deobf('curse.maven:jei-238222:3438494')
 
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
