--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ minecraft {
         }
 
         server {
-            workingDirectory project.file('run')
+            workingDirectory project.file('runServer')
 
             // Recommended logging data for a userdev environment
             // The markers can be changed as needed.
