--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,11 +6,11 @@ license="MIT License"
 #issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
 [[mods]] #mandatory
 modId="tconplanner" #mandatory
-version="1.1.0" #mandatory
+version="1.1.1" #mandatory
 displayName="Tinker's Planner" #mandatory
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
-#logoFile="examplemod.png" #optional
+logoFile="logo.png" #optional
 #credits="Thanks for this example mod goes to Java" #optional
 authors="Tiffit, SpikyStars" #optional
 # The description text for the mod (multi line!) (#mandatory)
@@ -30,6 +30,6 @@ description="Tinker's Planner is a client-side mod which allows you to try out d
 [[dependencies.tconplanner]]
     modId="tconstruct" #mandatory
     mandatory=true #mandatory
-    versionRange="[3.1.1.252,)" #mandatory
+    versionRange="[3.2.0.290,)" #mandatory
     side="CLIENT"
 
